// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsPoplist renders correctly 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-sqaep6-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  gap: 8px;
}

.cache-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-g1yzof-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 8px;
}

.cache-ezrk2s-StyledText-variantStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-sqaep6-StyledTagContainer eom2dbt1"
      >
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
          >
            scaleway
          </div>
        </span>
      </div>
      +1
      <div
        class="cache-g1yzof-StyledManyTagsContainer eom2dbt0"
      >
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
          >
            cloud
          </div>
        </span>
      </div>
    </div>
     
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-sqaep6-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  gap: 8px;
}

.cache-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-sqaep6-StyledTagContainer eom2dbt1"
      >
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
          >
            scaleway
          </div>
        </span>
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
          >
            cloud
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-sqaep6-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  gap: 8px;
}

.cache-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-g1yzof-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 8px;
}

.cache-ezrk2s-StyledText-variantStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-sqaep6-StyledTagContainer eom2dbt1"
      >
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
          >
            scaleway
          </div>
        </span>
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
          >
            cloud
          </div>
        </span>
      </div>
      +1
      <div
        class="cache-g1yzof-StyledManyTagsContainer eom2dbt0"
      >
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
          >
            provider
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-sqaep6-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  gap: 8px;
}

.cache-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-g1yzof-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 8px;
}

.cache-ezrk2s-StyledText-variantStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-sqaep6-StyledTagContainer eom2dbt1"
      >
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
          >
            scaleway
          </div>
        </span>
      </div>
      +2
      <div
        class="cache-g1yzof-StyledManyTagsContainer eom2dbt0"
      >
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
          >
            cloud
          </div>
        </span>
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
          >
            provider
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with multiline 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-c34a22-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  gap: 8px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-c34a22-StyledTagContainer>* {
  margin-bottom: 8px;
}

.cache-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-g1yzof-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 8px;
}

.cache-ezrk2s-StyledText-variantStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-c34a22-StyledTagContainer eom2dbt1"
      >
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
          >
            scaleway
          </div>
        </span>
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
          >
            cloud
          </div>
        </span>
      </div>
      +1
      <div
        class="cache-g1yzof-StyledManyTagsContainer eom2dbt0"
      >
        <span
          class="cache-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
          >
            provider
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with not tags 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;
